fix kmeans model

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,12 +24,14 @@
     <section class="about">
         <h2>Information</h2>
         <p>
-            This project resulted from research conducted as part of the individual thesis project in the master
-            department Information Design at Design Academy Eindhoven (NL), 2019
+            This project resulted from research conducted under the supervision of <a
+                href="https://anjagroten.info/" target="_blank">Anja Groten</a> in the master
+            department Information Design at Design Academy Eindhoven (NL), 2018
         </p>
         <br>
-        <p>Designed and developed by Giacomo Nanni, <a href="http://giacomonanni.info/">Link</a>
+        <p>Designed and developed by Giacomo Nanni, <a href="http://giacomonanni.info/" target="_blank">Link</a>
         </p>
+        <p>Last update: March, 2021</p>
     </section>
 </body>
 
