--- a/static/index.css
+++ b/static/index.css
@@ -55,6 +55,7 @@ h2 {
 }
 .about{
   min-height: 100vh;
+  margin-bottom: 0;
 }
 
 .grey {
@@ -171,7 +172,8 @@ form {
 
 .texteditor{
   display: flex;
- margin-top: 1rem;
+  flex-wrap: wrap;
+  margin-top: 1rem;
 }
 
 .texteditor > *  {
@@ -183,7 +185,7 @@ form {
 
 }
 
-.write * {
+.write>* {
   max-width: 640px;
   min-height: 500px;
 }
@@ -264,13 +266,18 @@ mark {
 }
 
 
-.json-database{
+.data-container > a {
   margin-top: .5rem;
   padding: 0.5rem;
   width: 100%;
-  height: 60px;
+  min-height: 30px;
   display: inline-block;
   border-top: 1px dashed black;
+  word-break: break-word;
+}
+
+.data-container > a:nth-of-type(1){
+  border-top: none;
 }
 
 .json-database a {
@@ -310,4 +317,24 @@ a::before{
 
 ::selection{
   background-color: yellow;
+}
+
+.fulltext p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: blue;
+}
+
+@media screen and (max-width: 640px){
+  header{
+    height: auto;
+  }
+  header a{
+    display: block;
+    min-height: 36px;
+    width: 100vw;
+  }
 }
