fix static pickle file 🥒

--- a/templates/database.html
+++ b/templates/database.html
@@ -44,7 +44,7 @@
     </p>
     <br>
     <p>
-      Download the current <a href="model.pkl" download>model</a>.
+      Download the current <a href="{{ url_for('static', filename='model.pkl') }}" download>model</a>.
     </p>
   </section>
   <section class="container" id="database-container">
